src/snapshot_middleware/snapshots/librojo__snapshot_middleware__dir__test__folder_in_folder.snap
---
source: src/snapshot_middleware/dir.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo
  relevant_paths:
    - /foo
    - /foo/init.meta.json
  context:
    emit_legacy_scripts: true
  middleware: ~
  specified_id:
    Ref: "00000000000000000000000000000000"
name: foo
class_name: Folder
properties: {}
children:
  - snapshot_id: "00000000000000000000000000000000"
    metadata:
      ignore_unknown_instances: false
      instigating_source:
        Path: /foo/Child
      relevant_paths:
        - /foo/Child
        - /foo/Child/init.meta.json
      context:
        emit_legacy_scripts: true
      middleware: dir
      specified_id:
        Ref: "00000000000000000000000000000000"
    name: Child
    class_name: Folder
    properties: {}
    children: []

